Apache Cayenne Release Notes
============================

For the latest information visit project web site:
https://cayenne.apache.org/

To browse individual bug reports check out project issue tracker:
https://issues.apache.org/jira/browse/CAY

----------------------------------
Release: 4.3.M1
Date:
----------------------------------
Changes/New Features:

CAY-2378 Switch usage of SelectQuery to ObjectSelect internally
CAY-2737 Cayenne 4.3: cleanup deprecated code
CAY-2741 Cleanup TransactionDescriptor and deprecate DefaultTransactionDescriptor

Bug Fixes:
