@@ -9,6 +9,8 @@ UPGRADING TO 4.3.M1
 
 * Per CAY-2737 All code deprecated in Cayenne 4.1 and 4.2 was removed, please review your code before upgrading.
 
+* Per CAY-2742 Minimum required Java version for Apache Cayenne is 11
+
 UPGRADING TO 4.2.M2
 
 * Per CAY-2659 All batch translators (`InsertBatchTranslator`, `UpdateBatchTranslator`, etc.) are updated to the new SQLBuilder utility.
